# stdlib

./: coq-stdlib.opam  dune-project  rocq-stdlib.opam
